# ray_tracer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  benchmark.md  image.ppm
benchmark/: benchmark1.cpp
include/: CMakeLists.txt  aabb.hpp  bvh_node.hpp  camera.hpp  color.hpp  common.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  perlin.hpp  quad.hpp  ray.hpp  rtw_stb_image.hpp  sphere.hpp  texture.hpp  timer.hpp  vec3.hpp
src/: CMakeLists.txt  main.cpp
